objects/Market_Issue_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Comment_Question__c</fullName>
        <label>Comment/Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Policy_Issue__c</fullName>
        <label>Market &amp; Policy Issue</label>
        <referenceTo>Market_Policy_Issue__c</referenceTo>
        <relationshipLabel>Market Issue Comments</relationshipLabel>
        <relationshipName>Market_Issue_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OwnerEmail__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerEmail</label>
        <type>Text</type>
    </fields>
    <label>Market Issue Comment</label>
    <nameField>
        <displayFormat>Comment #{0000}</displayFormat>
        <label>Market Issue Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Issue Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>